feature(gen/*): ran goa gen
