# gen/calc/endpoints.go
@@ -1,4 +1,4 @@
-// Code generated by goa v3.10.2, DO NOT EDIT.
+// Code generated by goa v3.5.2, DO NOT EDIT.
 //
 // calc endpoints
 //
@@ -95,6 +95,6 @@ func NewGetNotesEndpoint(s Service) goa.Endpoint {
 func NewCreateNoteEndpoint(s Service) goa.Endpoint {
 	return func(ctx context.Context, req interface{}) (interface{}, error) {
 		p := req.(*CreateNotePayload)
-		return s.CreateNote(ctx, p)
+		return nil, s.CreateNote(ctx, p)
 	}
 }
