# gen/grpc/calc/server/encode_decode.go
@@ -1,4 +1,4 @@
-// Code generated by goa v3.10.2, DO NOT EDIT.
+// Code generated by goa v3.5.2, DO NOT EDIT.
 //
 // calc gRPC server encoders and decoders
 //
@@ -23,7 +23,7 @@ func EncodeMultiplyResponse(ctx context.Context, v interface{}, hdr, trlr *metad
 	if !ok {
 		return nil, goagrpc.ErrInvalidType("calc", "multiply", "int", v)
 	}
-	resp := NewProtoMultiplyResponse(result)
+	resp := NewMultiplyResponse(result)
 	return resp, nil
 }
 
@@ -52,7 +52,7 @@ func EncodeAddResponse(ctx context.Context, v interface{}, hdr, trlr *metadata.M
 	if !ok {
 		return nil, goagrpc.ErrInvalidType("calc", "add", "int", v)
 	}
-	resp := NewProtoAddResponse(result)
+	resp := NewAddResponse(result)
 	return resp, nil
 }
 
@@ -81,7 +81,7 @@ func EncodeSubtractResponse(ctx context.Context, v interface{}, hdr, trlr *metad
 	if !ok {
 		return nil, goagrpc.ErrInvalidType("calc", "subtract", "int", v)
 	}
-	resp := NewProtoSubtractResponse(result)
+	resp := NewSubtractResponse(result)
 	return resp, nil
 }
 
@@ -111,7 +111,7 @@ func EncodeDivideResponse(ctx context.Context, v interface{}, hdr, trlr *metadat
 	if !ok {
 		return nil, goagrpc.ErrInvalidType("calc", "divide", "float64", v)
 	}
-	resp := NewProtoDivideResponse(result)
+	resp := NewDivideResponse(result)
 	return resp, nil
 }
 
@@ -141,7 +141,7 @@ func EncodeGetNotesResponse(ctx context.Context, v interface{}, hdr, trlr *metad
 	if !ok {
 		return nil, goagrpc.ErrInvalidType("calc", "getNotes", "*calc.GetNotesResult", v)
 	}
-	resp := NewProtoGetNotesResponse(result)
+	resp := NewGetNotesResponse(result)
 	return resp, nil
 }
 
@@ -167,11 +167,7 @@ func DecodeGetNotesRequest(ctx context.Context, v interface{}, md metadata.MD) (
 // EncodeCreateNoteResponse encodes responses from the "calc" service
 // "createNote" endpoint.
 func EncodeCreateNoteResponse(ctx context.Context, v interface{}, hdr, trlr *metadata.MD) (interface{}, error) {
-	result, ok := v.(*calc.Note)
-	if !ok {
-		return nil, goagrpc.ErrInvalidType("calc", "createNote", "*calc.Note", v)
-	}
-	resp := NewProtoCreateNoteResponse(result)
+	resp := NewCreateNoteResponse()
 	return resp, nil
 }
 
