# gen/grpc/calc/server/types.go
@@ -1,4 +1,4 @@
-// Code generated by goa v3.10.2, DO NOT EDIT.
+// Code generated by goa v3.5.2, DO NOT EDIT.
 //
 // calc gRPC server types
 //
@@ -22,9 +22,9 @@ func NewMultiplyPayload(message *calcpb.MultiplyRequest) *calc.MultiplyPayload {
 	return v
 }
 
-// NewProtoMultiplyResponse builds the gRPC response type from the result of
-// the "multiply" endpoint of the "calc" service.
-func NewProtoMultiplyResponse(result int) *calcpb.MultiplyResponse {
+// NewMultiplyResponse builds the gRPC response type from the result of the
+// "multiply" endpoint of the "calc" service.
+func NewMultiplyResponse(result int) *calcpb.MultiplyResponse {
 	message := &calcpb.MultiplyResponse{}
 	message.Field = int32(result)
 	return message
@@ -40,9 +40,9 @@ func NewAddPayload(message *calcpb.AddRequest) *calc.AddPayload {
 	return v
 }
 
-// NewProtoAddResponse builds the gRPC response type from the result of the
-// "add" endpoint of the "calc" service.
-func NewProtoAddResponse(result int) *calcpb.AddResponse {
+// NewAddResponse builds the gRPC response type from the result of the "add"
+// endpoint of the "calc" service.
+func NewAddResponse(result int) *calcpb.AddResponse {
 	message := &calcpb.AddResponse{}
 	message.Field = int32(result)
 	return message
@@ -58,9 +58,9 @@ func NewSubtractPayload(message *calcpb.SubtractRequest) *calc.SubtractPayload {
 	return v
 }
 
-// NewProtoSubtractResponse builds the gRPC response type from the result of
-// the "subtract" endpoint of the "calc" service.
-func NewProtoSubtractResponse(result int) *calcpb.SubtractResponse {
+// NewSubtractResponse builds the gRPC response type from the result of the
+// "subtract" endpoint of the "calc" service.
+func NewSubtractResponse(result int) *calcpb.SubtractResponse {
 	message := &calcpb.SubtractResponse{}
 	message.Field = int32(result)
 	return message
@@ -76,9 +76,9 @@ func NewDividePayload(message *calcpb.DivideRequest) *calc.DividePayload {
 	return v
 }
 
-// NewProtoDivideResponse builds the gRPC response type from the result of the
+// NewDivideResponse builds the gRPC response type from the result of the
 // "divide" endpoint of the "calc" service.
-func NewProtoDivideResponse(result float64) *calcpb.DivideResponse {
+func NewDivideResponse(result float64) *calcpb.DivideResponse {
 	message := &calcpb.DivideResponse{}
 	message.Field = result
 	return message
@@ -93,16 +93,19 @@ func NewGetNotesPayload(message *calcpb.GetNotesRequest) *calc.GetNotesPayload {
 	return v
 }
 
-// NewProtoGetNotesResponse builds the gRPC response type from the result of
-// the "getNotes" endpoint of the "calc" service.
-func NewProtoGetNotesResponse(result *calc.GetNotesResult) *calcpb.GetNotesResponse {
+// NewGetNotesResponse builds the gRPC response type from the result of the
+// "getNotes" endpoint of the "calc" service.
+func NewGetNotesResponse(result *calc.GetNotesResult) *calcpb.GetNotesResponse {
 	message := &calcpb.GetNotesResponse{}
 	if result.Notes != nil {
 		message.Notes = make([]*calcpb.Note, len(result.Notes))
 		for i, val := range result.Notes {
-			message.Notes[i] = &calcpb.Note{
-				Title: val.Title,
-				Body:  val.Body,
+			message.Notes[i] = &calcpb.Note{}
+			if val.Title != nil {
+				message.Notes[i].Title = *val.Title
+			}
+			if val.Body != nil {
+				message.Notes[i].Body = *val.Body
 			}
 		}
 	}
@@ -115,15 +118,49 @@ func NewCreateNotePayload(message *calcpb.CreateNoteRequest) *calc.CreateNotePay
 	v := &calc.CreateNotePayload{
 		UserID: message.UserId,
 	}
+	if message.Note != nil {
+		v.Note = protobufCalcpbNoteToCalcNote(message.Note)
+	}
 	return v
 }
 
-// NewProtoCreateNoteResponse builds the gRPC response type from the result of
-// the "createNote" endpoint of the "calc" service.
-func NewProtoCreateNoteResponse(result *calc.Note) *calcpb.CreateNoteResponse {
-	message := &calcpb.CreateNoteResponse{
-		Title: result.Title,
-		Body:  result.Body,
-	}
+// NewCreateNoteResponse builds the gRPC response type from the result of the
+// "createNote" endpoint of the "calc" service.
+func NewCreateNoteResponse() *calcpb.CreateNoteResponse {
+	message := &calcpb.CreateNoteResponse{}
 	return message
+}
+
+// protobufCalcpbNoteToCalcNote builds a value of type *calc.Note from a value
+// of type *calcpb.Note.
+func protobufCalcpbNoteToCalcNote(v *calcpb.Note) *calc.Note {
+	if v == nil {
+		return nil
+	}
+	res := &calc.Note{}
+	if v.Title != "" {
+		res.Title = &v.Title
+	}
+	if v.Body != "" {
+		res.Body = &v.Body
+	}
+
+	return res
+}
+
+// svcCalcNoteToCalcpbNote builds a value of type *calcpb.Note from a value of
+// type *calc.Note.
+func svcCalcNoteToCalcpbNote(v *calc.Note) *calcpb.Note {
+	if v == nil {
+		return nil
+	}
+	res := &calcpb.Note{}
+	if v.Title != nil {
+		res.Title = *v.Title
+	}
+	if v.Body != nil {
+		res.Body = *v.Body
+	}
+
+	return res
 }
