# gen/http/calc/server/encode_decode.go
@@ -1,4 +1,4 @@
-// Code generated by goa v3.10.2, DO NOT EDIT.
+// Code generated by goa v3.5.2, DO NOT EDIT.
 //
 // calc HTTP server encoders and decoders
 //
@@ -10,6 +10,7 @@ package server
 import (
 	"context"
 	calc "goa-test/gen/calc"
+	"io"
 	"net/http"
 	"strconv"
 
@@ -241,11 +242,8 @@ func DecodeGetNotesRequest(mux goahttp.Muxer, decoder func(*http.Request) goahtt
 // calc createNote endpoint.
 func EncodeCreateNoteResponse(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder) func(context.Context, http.ResponseWriter, interface{}) error {
 	return func(ctx context.Context, w http.ResponseWriter, v interface{}) error {
-		res, _ := v.(*calc.Note)
-		enc := encoder(ctx, w)
-		body := NewCreateNoteResponseBody(res)
-		w.WriteHeader(http.StatusOK)
-		return enc.Encode(body)
+		w.WriteHeader(http.StatusCreated)
+		return nil
 	}
 }
 
@@ -254,14 +252,55 @@ func EncodeCreateNoteResponse(encoder func(context.Context, http.ResponseWriter)
 func DecodeCreateNoteRequest(mux goahttp.Muxer, decoder func(*http.Request) goahttp.Decoder) func(*http.Request) (interface{}, error) {
 	return func(r *http.Request) (interface{}, error) {
 		var (
+			body CreateNoteRequestBody
+			err  error
+		)
+		err = decoder(r).Decode(&body)
+		if err != nil {
+			if err == io.EOF {
+				err = nil
+			} else {
+				return nil, goa.DecodePayloadError(err.Error())
+			}
+		}
+
+		var (
 			userID string
 
 			params = mux.Vars(r)
 		)
 		userID = params["userID"]
-		payload := NewCreateNotePayload(userID)
+		payload := NewCreateNotePayload(&body, userID)
 
 		return payload, nil
+	}
+}
+
+// EncodeCreateNoteError returns an encoder for errors returned by the
+// createNote calc endpoint.
+func EncodeCreateNoteError(encoder func(context.Context, http.ResponseWriter) goahttp.Encoder, formatter func(err error) goahttp.Statuser) func(context.Context, http.ResponseWriter, error) error {
+	encodeError := goahttp.ErrorEncoder(encoder, formatter)
+	return func(ctx context.Context, w http.ResponseWriter, v error) error {
+		en, ok := v.(ErrorNamer)
+		if !ok {
+			return encodeError(ctx, w, v)
+		}
+		switch en.ErrorName() {
+		case "BadRequest":
+			res := v.(*goa.ServiceError)
+			enc := encoder(ctx, w)
+			var body interface{}
+			if formatter != nil {
+				body = formatter(res)
+			} else {
+				body = NewCreateNoteBadRequestResponseBody(res)
+			}
+			w.Header().Set("goa-error", res.ErrorName())
+			w.WriteHeader(http.StatusBadRequest)
+			return enc.Encode(body)
+		default:
+			return encodeError(ctx, w, v)
+		}
 	}
 }
 
