# gen/http/calc/server/types.go
@@ -1,4 +1,4 @@
-// Code generated by goa v3.10.2, DO NOT EDIT.
+// Code generated by goa v3.5.2, DO NOT EDIT.
 //
 // calc HTTP server types
 //
@@ -9,7 +9,18 @@ package server
 
 import (
 	calc "goa-test/gen/calc"
+
+	goa "goa.design/goa/v3/pkg"
 )
+
+// CreateNoteRequestBody is the type of the "calc" service "createNote"
+// endpoint HTTP request body.
+type CreateNoteRequestBody struct {
+	// The title of the Note
+	Title *string `form:"Title,omitempty" json:"Title,omitempty" xml:"Title,omitempty"`
+	// The Body of the Note
+	Body *string `form:"Body,omitempty" json:"Body,omitempty" xml:"Body,omitempty"`
+}
 
 // GetNotesResponseBody is the type of the "calc" service "getNotes" endpoint
 // HTTP response body.
@@ -18,13 +29,22 @@ type GetNotesResponseBody struct {
 	Notes []*NoteResponseBody `form:"notes,omitempty" json:"notes,omitempty" xml:"notes,omitempty"`
 }
 
-// CreateNoteResponseBody is the type of the "calc" service "createNote"
-// endpoint HTTP response body.
-type CreateNoteResponseBody struct {
-	// The title of the Note
-	Title *string `form:"Title,omitempty" json:"Title,omitempty" xml:"Title,omitempty"`
-	// The Body of the Note
-	Body *string `form:"Body,omitempty" json:"Body,omitempty" xml:"Body,omitempty"`
+// CreateNoteBadRequestResponseBody is the type of the "calc" service
+// "createNote" endpoint HTTP response body for the "BadRequest" error.
+type CreateNoteBadRequestResponseBody struct {
+	// Name is the name of this class of errors.
+	Name string `form:"name" json:"name" xml:"name"`
+	// ID is a unique identifier for this particular occurrence of the problem.
+	ID string `form:"id" json:"id" xml:"id"`
+	// Message is a human-readable explanation specific to this occurrence of the
+	// problem.
+	Message string `form:"message" json:"message" xml:"message"`
+	// Is the error temporary?
+	Temporary bool `form:"temporary" json:"temporary" xml:"temporary"`
+	// Is the error a timeout?
+	Timeout bool `form:"timeout" json:"timeout" xml:"timeout"`
+	// Is the error a server-side fault?
+	Fault bool `form:"fault" json:"fault" xml:"fault"`
 }
 
 // NoteResponseBody is used to define fields on response body types.
@@ -48,12 +68,16 @@ func NewGetNotesResponseBody(res *calc.GetNotesResult) *GetNotesResponseBody {
 	return body
 }
 
-// NewCreateNoteResponseBody builds the HTTP response body from the result of
-// the "createNote" endpoint of the "calc" service.
-func NewCreateNoteResponseBody(res *calc.Note) *CreateNoteResponseBody {
-	body := &CreateNoteResponseBody{
-		Title: res.Title,
-		Body:  res.Body,
+// NewCreateNoteBadRequestResponseBody builds the HTTP response body from the
+// result of the "createNote" endpoint of the "calc" service.
+func NewCreateNoteBadRequestResponseBody(res *goa.ServiceError) *CreateNoteBadRequestResponseBody {
+	body := &CreateNoteBadRequestResponseBody{
+		Name:      res.Name,
+		ID:        res.ID,
+		Message:   res.Message,
+		Temporary: res.Temporary,
+		Timeout:   res.Timeout,
+		Fault:     res.Fault,
 	}
 	return body
 }
@@ -103,9 +127,15 @@ func NewGetNotesPayload(userID string) *calc.GetNotesPayload {
 }
 
 // NewCreateNotePayload builds a calc service createNote endpoint payload.
-func NewCreateNotePayload(userID string) *calc.CreateNotePayload {
-	v := &calc.CreateNotePayload{}
-	v.UserID = userID
+func NewCreateNotePayload(body *CreateNoteRequestBody, userID string) *calc.CreateNotePayload {
+	v := &calc.Note{
+		Title: body.Title,
+		Body:  body.Body,
+	}
+	res := &calc.CreateNotePayload{
+		Note: v,
+	}
+	res.UserID = userID
 
-	return v
+	return res
 }
